# wiringPi

./: .gitignore  AUTHORS  Android.bp  INSTALL.txt  Makefile.am  README.TXT  configure  configure.ac  wiringPi.pc.in  wiringPiDev.pc.in
debian/: changelog
devLib/: Makefile.am
examples/: Makefile.in
examples/Gertboard/: Makefile.in
examples/PiFace/: Makefile.in
examples/PiGlow/: Makefile.in
examples/q2w/: Makefile.in
gpio/: Makefile.am  readall.c
udev/rules.d/: 99-odroid-wiringpi-aml.rules  99-odroid-wiringpi-rockchip.rules
wiringPi/: Makefile.am  odroidc1.c  odroidc2.c  odroidc4.c  odroidc5.c  odroidn1.c  odroidn2.c  odroidxu3.c  wiringPi.c  wiringPi.h  wiringPiI2C.c  wiringPiSPI.c  wiringPi_private.h
